--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 asgiref==3.4.1
-backcall==0.2.0
 backports.zoneinfo==0.2.1
-decorator==5.1.0
-Django==4.0
-ipython==7.30.1
-jedi==0.18.1
-matplotlib-inline==0.1.3
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.24
-ptyprocess==0.7.0
-Pygments==2.10.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.10
+cryptography==36.0.1
+defusedxml==0.7.1
+Django==4.0.1
+django-allauth==0.47.0
+django-crispy-forms==1.13.0
+idna==3.3
+oauthlib==3.1.1
+pycparser==2.21
+PyJWT==2.3.0
+python3-openid==3.2.0
+requests==2.27.1
+requests-oauthlib==1.3.0
 sqlparse==0.4.2
-traitlets==5.1.1
-wcwidth==0.2.5
+urllib3==1.26.8
